Fix invoices tab not showing in responsive mode.

--- a/assets/stylesheets/contracts.css
+++ b/assets/stylesheets/contracts.css
@@ -135,3 +135,7 @@ div.flash.contract_warning {
 }
 
 .icon-link { background-image: url(../../../images/link.png); }
+
+#content .tabs {
+  clear: both;
+}
